Fix backface visibility

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -65,3 +65,7 @@ body {
 .text-shadow {
   text-shadow: rgba(0, 0, 0, 0.5) 0.5px 0.5px 1px;
 }
+
+.backface-hidden {
+  backface-visibility: hidden;
+}
